--- a/frontend/nestin/src/app/pages/home-page/home-page.component.scss
+++ b/frontend/nestin/src/app/pages/home-page/home-page.component.scss
@@ -62,3 +62,12 @@ $breakpoint-sm: 576px;
 .btn-primary {
   color: var(--bs-white);
 }
+.frosted-glass {
+  backdrop-filter: blur(10px);
+  transition: background-color 0.3s ease;
+  background-color: rgba(255, 255, 255, 1); // default full opacity
+}
+
+.scrolled {
+  background-color: rgba(255, 255, 255, 0.5); 
+}
