--- a/frontend/nestin/src/app/pages/home-page/home-page.component.html
+++ b/frontend/nestin/src/app/pages/home-page/home-page.component.html
@@ -73,7 +73,8 @@
               type="text"
               class="form-control border-0 p-0 bg-transparent transition-all"
               [style.font-size]="scrollY > 50 ? '0.8rem' : '1rem'"
-              placeholder="Search destination" />
+              placeholder="Search destination" 
+              [(ngModel)]="LocationName"/>
           </div>
         </div>
 
@@ -87,7 +88,8 @@
           <input
             type="date"
             class="form-control border-0 p-0 bg-transparent transition-all"
-            [style.font-size]="scrollY > 50 ? '0.8rem' : '1rem'" />
+            [style.font-size]="scrollY > 50 ? '0.8rem' : '1rem'" 
+            [(ngModel)]="checkInDate"/>
         </div>
 
         <!-- Check out -->
@@ -100,7 +102,8 @@
           <input
             type="date"
             class="form-control border-0 p-0 bg-transparent transition-all"
-            [style.font-size]="scrollY > 50 ? '0.8rem' : '1rem'" />
+            [style.font-size]="scrollY > 50 ? '0.8rem' : '1rem'"
+            [(ngModel)]="checkOutDate" />
         </div>
 
         <!-- Guests -->
@@ -126,7 +129,9 @@
             <button
               type="button"
               class="btn btn-primary rounded-pill ms-2 d-flex align-items-center justify-content-center px-4 transition-all"
-              [style.height]="scrollY > 50 ? '40px' : '48px'">
+              [style.height]="scrollY > 50 ? '40px' : '48px' "
+              (click)="searchProperties()">
+              
               <fa-icon
                 [icon]="icons['search']"
                 class="text-white me-2"></fa-icon>
@@ -146,7 +151,8 @@
           class="d-flex flex-column align-items-center cursor-pointer px-3 py-2 rounded border"
           [class.bg-primary]="selectedPropertyType === type.id"
           [class.text-white]="selectedPropertyType === type.id"
-          (click)="selectPropertyType(type.id)">
+          (click)="selectPropertyType(type.id)"
+          >
           <fa-icon
             [icon]="icons[type.icon]"
             [class.text-primary]="selectedPropertyType !== type.id"></fa-icon>
@@ -295,33 +301,34 @@
           <!-- Title and Info -->
           <div class="mb-2">
             <h6
-              class="card-title fw-semibold mb-2 text-truncate"
-              style="font-size: 1rem">
-              {{ prop.title }}
-              <div class="d-flex align-items-center mt-1">
-                <!-- Rating number -->
-                <span class="me-1">
-                  {{ prop.averageRating | number: '1.1-1' }}
-                </span>
-
-                <!-- Star icon -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  viewBox="0 0 24 24"
-                  fill="#cccc08"
-                  stroke="#cccc08"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="lucide-star">
-                  <path
-                    d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z" />
-                </svg>
-              </div>
-            </h6>
-            <p class="card-text text-muted small mb-0" style="line-height: 1.4">
+            class="card-title fw-semibold mb-2 text-truncate"
+            style="font-size: 1rem; cursor: pointer"
+            (click)="navigateToProperty(prop.id)">
+            {{ prop.title }}
+            <div class="d-flex align-items-center mt-1">
+              <!-- Rating number -->
+              <span class="me-1">
+                {{ prop.averageRating | number: '1.1-1' }}
+              </span>
+          
+              <!-- Star icon -->
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                viewBox="0 0 24 24"
+                fill="#cccc08"
+                stroke="#cccc08"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide-star">
+                <path
+                  d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z" />
+              </svg>
+            </div>
+          </h6>
+           <p class="card-text text-muted small mb-0" style="line-height: 1.4">
               {{ prop.distanceFromMe }} km away <br />
 
               {{ prop.location.name }}
