--- a/frontend/nestin/src/app/pages/home-page/home-page.component.html
+++ b/frontend/nestin/src/app/pages/home-page/home-page.component.html
@@ -257,7 +257,7 @@
             box-shadow 0.2s ease;
         ">
         <button
-          class="btn p-0 position-absolute top-0 end-0 me-2 mt-2 my-icon bg-transparent border-0 z-2">
+          class="btn p-0 position-absolute top-0 end-0 me-2 mt-2 my-icon bg-transparent border-0 z-2" (click)="addToFav(prop.id)">
           <lucide-icon [name]="icon.heart"></lucide-icon>
         </button>
         <div
