--- a/frontend/nestin/src/app/components/PropertyDetails/booking-card/booking-card.component.css
+++ b/frontend/nestin/src/app/components/PropertyDetails/booking-card/booking-card.component.css
@@ -1,13 +1,14 @@
-
 .booking-card {
   position: sticky;
-  top: 20px;
+  top: 15vh;
   left: 0;
   border: 1px solid #ebebeb;
   border-radius: 12px;
   padding: 24px;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.12);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  font-family:
+    -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
+    sans-serif;
   background: white;
   /* width: 450px; */
   /* height: 400px; */
@@ -15,7 +16,7 @@
   margin-top: 30px;
 
   .price-section {
-    margin-bottom: 24px;  
+    margin-bottom: 24px;
     .price {
       font-size: 22px;
       font-weight: 600;
@@ -26,15 +27,15 @@
       gap: 8px;
 
       .price-icon {
-      width: 24px;
-      height: 24px;
-      background: url('/path-to-icon.svg') no-repeat center center;
-      background-size: contain;
+        width: 24px;
+        height: 24px;
+        background: url('/path-to-icon.svg') no-repeat center center;
+        background-size: contain;
       }
 
       .price-text {
-      font-size: 14px;
-      color: #717171;
+        font-size: 14px;
+        color: #717171;
       }
     }
     .price-label {
@@ -103,7 +104,7 @@
   .book-button {
     width: 100%;
     padding: 14px;
-    background: #ff385c;
+    /* background: #ff385c; */
     color: white;
     border: none;
     border-radius: 8px;
@@ -114,7 +115,7 @@
     transition: all 0.2s;
 
     &:hover {
-      background: #e61e4d;
+      /* background: ; */
     }
 
     &:disabled {
@@ -154,8 +155,6 @@
     }
   }
 }
-
-
 
 .guests-selector {
   margin-bottom: 24px;
@@ -264,7 +263,6 @@
   }
 }
 
-
 @media (max-width: 768px) {
   .guest-modal {
     align-items: flex-end;
@@ -275,5 +273,3 @@
     }
   }
 }
-
-
