--- a/frontend/nestin/src/app/components/PropertyDetails/rating-header/rating-header.component.html
+++ b/frontend/nestin/src/app/components/PropertyDetails/rating-header/rating-header.component.html
@@ -1,20 +1,23 @@
-
 <div class="ratings-header">
   <div class="ratings-count">{{ reviewCountText }}</div>
-  
+
   <div class="rating-display">
     <div class="rating-value">{{ starRating }}</div>
     <div class="stars">
-      <span *ngFor="let _ of [].constructor(filledStars)" class="star filled">★</span>
+      <span *ngFor="let _ of [].constructor(filledStars)" class="star filled"
+        >★</span
+      >
       <span *ngIf="hasHalfStar" class="star half">★</span>
-      <span *ngFor="let _ of [].constructor(emptyStars)" class="star empty">★</span>
+      <span *ngFor="let _ of [].constructor(emptyStars)" class="star empty"
+        >★</span
+      >
     </div>
   </div>
 
   <div class="highlight-text" *ngIf="isHighlyRated">
-    One of Airbnb's most loved homes
+    One of Nesting's most loved homes
   </div>
-  
+
   <div class="favorite-badge" *ngIf="isHighlyRated">
     <span class="emoji">😊</span>
     <span>Guest favorite</span>
